# raylib-game

./: .gitignore  CMakeLists.txt
resources/: atlas.json
src/: app.cpp  app.h  main.cpp
src/components/: Sprite.h  Transform.h  box_collider_2d.h  color_rect.h  components.h
src/engine/: app.cpp  app.h
src/engine/components/: components.h
src/engine/scenes/: scene.h
src/engine/systems/: camera_system.cpp  camera_system.h  collision_detection_system.cpp  collision_detection_system.h  move_system.cpp  move_system.h  overlap_correction_system.cpp  overlap_correction_system.h  shape_render_system.cpp  shape_render_system.h  sprite_renderer_system.cpp  sprite_renderer_system.h  system.h
src/factories/: entities_factory.cpp  entities_factory.h
src/game/factories/: entities_factory.cpp  entities_factory.h
src/game/scenes/: my_scene.cpp  my_scene.h
src/game/systems/: player_input_system.cpp  player_input_system.h
src/scenes/: my_scene.cpp  my_scene.h  scene.h
src/systems/: camera_system.cpp  camera_system.h  collider_system.cpp  collider_system.h  collision_detection_system.cpp  collision_detection_system.h  move_system.cpp  move_system.h  overlap_correction_system.cpp  overlap_correction_system.h  player_input_system.cpp  player_input_system.h  render_system.cpp  render_system.h  shape_render_system.cpp  shape_render_system.h  sprite_renderer_system.cpp  sprite_renderer_system.h  system.h
src/utils/: texture_packer.cpp  texture_packer.h
